Fixed the layout issue , and fixed menu css

--- a/src/index.css
+++ b/src/index.css
@@ -23,12 +23,11 @@ a:hover {
   color: #535bf2;
 }
 
-body {
+html, body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  width: 100%;
   min-height: 100vh;
+  padding-top: 50px;
 }
 
 h1 {
